--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.jsonl filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
